--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,192 @@
 <!-- * * * * * * * * * * * JERSON GALVEZ ENSUNCHO * * * * * * * * * * * -->
 <!-- ****** * * * * * * * * * PROYECTO WEBSOFT * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-<h1>hola</h1>
+<main id="content" role="main" class="overflow-hidden">
+    <div class="position-relative">
+      <div class="js-swiper-blog-journal-hero swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide d-flex gradient-x-overlay-sm-dark bg-img-start" style="background-image: url(../assets/img/banner1.jpg); min-height: 40rem;">
+            <div class="container d-flex align-items-center" style="min-height: 40rem;">
+              <div class="w-lg-100 me-3">
+                <div class="d-flex align-items-center mb-3">
+                  
+                </div>
+                <div class="mb-5">
+                  <h4 class="h2 text-white">WELCOME TO</h4>
+                  <h2 class="h1 text-white">PROFESSIONAL TRANSPORT</h2>
+                </div>
+                <!-- <a class="btn btn-primary btn-transition" href="../blog-article.html">Read article <i class="bi-chevron-right small ms-1"></i></a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="js-swiper-blog-journal-hero-pagination swiper-pagination swiper-pagination-light swiper-pagination-vertical swiper-pagination-middle-y-end me-3 d-lg-none"></div>
+      </div>
+    </div>
+    <header id="header" class="navbar navbar-expand-lg navbar-end navbar-absolute-top navbar-dark">
+      <div class="container navbar-topbar">
+        <nav class="js-mega-menu navbar-nav-wrap">
+          <!-- Toggler -->
+          <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#topbarNavDropdown" aria-controls="topbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="d-flex justify-content-between align-items-center small">
+              <span class="navbar-toggler-text">Topbar</span>
+  
+              <span class="navbar-toggler-default">
+                <i class="bi-chevron-down ms-2"></i>
+              </span>
+              <span class="navbar-toggler-toggled">
+                <i class="bi-chevron-up ms-2"></i>
+              </span>
+            </span>
+          </button>
+          <!-- End Toggler -->
+  
+          <div id="topbarNavDropdown" class="navbar-nav-wrap-collapse collapse navbar-collapse navbar-topbar-collapse">
+            <div class="navbar-toggler-wrapper">
+              <div class="navbar-topbar-toggler d-flex justify-content-between align-items-center">
+                <span class="navbar-toggler-text small">Topbar</span>
+  
+                <!-- Toggler -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topbarNavDropdown" aria-controls="topbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <i class="bi-x"></i>
+                </button>
+                <!-- End Toggler -->
+              </div>
+            </div>
+  
+            <ul class="navbar-nav">
+              <!-- Demos -->
+              <li class="hs-has-mega-menu nav-item">
+                <a id="demosMegaMenu" class="hs-mega-menu-invoker nav-link" aria-current="page" href="#" role="button">
+                    <i class="fab fa-facebook"></i>
+                </a>
+              </li>
+              <li class="hs-has-mega-menu nav-item" >
+                <a id="docsMegaMenu" class="hs-mega-menu-invoker nav-link" href="#" role="button">
+                    <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li class="hs-has-mega-menu nav-item" >
+                <a id="docsMegaMenu" class="hs-mega-menu-invoker nav-link" href="#" role="button">
+                    <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+      </nav>
+    </div>
+    <div class="container">
+      <nav class="js-mega-menu navbar-nav-wrap">
+        <a class="navbar-brand" href="#" aria-label="Front">
+          <img class="navbar-brand-logo" src="assets/img/greatexportblanco.png" alt="Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-default">
+            <i class="fas fa-list"></i>
+          </span>
+          <span class="navbar-toggler-toggled">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <div class="navbar-absolute-top-scroller">
+            <ul class="navbar-nav">
+              <li class="hs-has-mega-menu nav-item">
+                <a id="landingsMegaMenu" class="hs-mega-menu-invoker nav-link text-white" aria-current="page" href="#" role="button" aria-expanded="false">
+                    HOME
+                </a>
+              </li>
+              <li class="hs-has-sub-menu nav-item">
+                <a id="companyMegaMenu" class="hs-mega-menu-invoker nav-link text-white" href="#" role="button" aria-expanded="false">
+                    PAGES
+                </a>
+              </li>
+              <li class="hs-has-sub-menu nav-item">
+                <a id="accountMegaMenu" class="hs-mega-menu-invoker nav-link text-white" href="#" role="button" aria-expanded="false">
+                    SERVICES
+                </a>
+              </li>
+              <li class="hs-has-sub-menu nav-item">
+                <a id="pagesMegaMenu" class="hs-mega-menu-invoker nav-link text-white"  href="#" role="button" aria-expanded="false">
+                    FLEET
+                </a>
+              </li>
+              <li class="hs-has-sub-menu nav-item">
+                <a id="blogMegaMenu" class="hs-mega-menu-invoker nav-link text-white" href="#" role="button" aria-expanded="false">
+                    NEW
+                </a>
+               
+              </li>
+              <li class="hs-has-sub-menu nav-item">
+                <a id="portfolioMegaMenu" class="hs-mega-menu-invoker nav-link text-white" href="#" role="button" aria-expanded="false">
+                    CONTACT
+                </a>
+                
+              </li>
+              <!-- <li class="nav-item">
+                <a class="btn btn-light btn-transition" href="https://themes.getbootstrap.com/product/front-multipurpose-responsive-template/" target="_blank">Buy now</a>
+              </li> -->
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <div class="container-fluid" style="background-color: #0b60a9;">
+    <div class="col-md-12">
+      <div class="row">
+        <div class="border-bottom">
+    <div class="container content-space-1">
+      <div class="row">
+        <div class="col-md-2 mb-7 mb-md-0">
+          <div class="d-flex">
+            <div class="flex-shrink-0">
+              <img class="avatar avatar-4x3" src="../assets/svg/illustrations/oc-protected-card.svg">
+            </div>
+            <div class="flex-grow-1 ms-4">
+              <h4 class="mb-1 text-white">CALLCENTER</h4>
+              <p class="small mb-0 text-white"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-7 mb-md-0">
+          <div class="d-flex">
+            <div class="flex-shrink-0">
+              <img class="avatar avatar-4x3" src="../assets/svg/illustrations/oc-return.svg">
+            </div>
+            <div class="flex-grow-1 ms-4">
+              <h4 class="mb-1 text-white">WORKING HOURS</h4>
+              <p class="small mb-0"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="d-flex">
+            <div class="flex-shrink-0">
+              <img class="avatar avatar-4x3" src="../assets/svg/illustrations/oc-truck.svg">
+            </div>
+            <div class="flex-grow-1 ms-4">
+              <h4 class="mb-1 text-white">OUR LOCATION</h4>
+              <p class="small mb-0"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+            <div class="d-flex">
+              <div class="flex-shrink-0">
+                <img class="avatar avatar-4x3" src="../assets/svg/illustrations/oc-truck.svg">
+              </div>
+              <div class="flex-grow-1 ms-4">
+                <h4 class="mb-1 text-white">GET QUICK QUOTE</h4>
+                <p class="small mb-0"></p>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+      </div>
+    </div>    
+  </div>
 
 <router-outlet></router-outlet>
