--- a/src/app/seguridad/iniciarsesion/iniciarsesion.component.html
+++ b/src/app/seguridad/iniciarsesion/iniciarsesion.component.html
@@ -1,55 +1,70 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *  * -->
 <!-- * * * * * * * * * * * JERSON GALVEZ ENSUNCHO * * * * * * * * * * * -->
-<!-- ******* * * * * * * * PROYECTO CLINICSOFT * * * * * * * * * * * * * -->
+<!-- ******* * * * * * * * PROYECTO INVENTSOFT * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 <main class="main-content  mt-0">
-    <section>
-    <div class="page-header min-vh-100">
-    <div class="container">
-    <div class="row">
-      <div class="col-6 d-lg-flex d-none h-100  position-absolute top-0 end-0 text-center justify-content-center flex-column">
-    <div class="position-relative bg-gradient-danger h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center overflow-hidden" style="background-image: url('https://cdn.pixabay.com/photo/2021/10/11/17/37/doctor-6701410_960_720.jpg'); background-size: cover;">
+  <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('https://www.bbva.com/wp-content/uploads/2022/06/BBVA-finanzas-personales-y-corporativas.jpg'); background-position: right;">
     <span class="mask bg-gradient-dark opacity-6"></span>
-    <!-- <h4 class="mt-5 text-white font-weight-bolder position-relative">"Attention is the new currency"</h4>
-    <p class="text-white position-relative">The more effortless the writing looks, the more effort the writer actually put into the process.</p> -->
-    </div>
-    </div>
-    <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column mx-lg-0 mx-auto">
-    <div class="card card-plain">
-    <div class="card-header pb-0 text-start">
-      <h4 class="font-weight-bolder text-center">Iniciar sesión</h4>
-      <div class="text-center">
-        <small class="text-center">Clinica Salud Madre y Mujer</small>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-5 text-center mx-auto">
+            <img src="" width="80px;" class="img-fluid">
+          <h2 class="text-white mb-2 mt-2">Bienvenido</h2>
+          <p class="font-weight-bold text-white">Software de ventas e inventarios para su negocio</p>
+        </div>
       </div>
     </div>
-    <div class="card-body">
-    <form role="form">
-    <div class="mb-3">
-    <input type="text" class="form-control form-control-lg" placeholder="Usuario" title="Usuario">
+  </div>
+  <div class="container">
+    <div class="row mt-lg-n11 mt-md-n11 mt-n11 justify-content-center">
+      <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
+        <div class="messageError"></div>
+        <div class="card z-index-0">
+          <div class="card-header text-center pt-4">
+            <h5 class="text-uppercase">Iniciar Sesión</h5>
+          </div>
+          <div class="row px-xl-5 px-sm-4 px-3">
+            <div class="position-relative text-center">
+              <!-- <p class="text-sm font-weight-bold  text-secondary text-border d-inline z-index-2 bg-white px-1">
+                <span class="cyan-text lead font-weight-bold">Medical</span> <span class="rosa-text lead font-weight-bold">Clinic</span> 
+              </p> -->
+            </div>
+          </div>
+          <div class="card-body">
+            <form role="form" method="post" validate id="FormLOG">
+              <div class="mb-3">
+                <input type="text" required class="form-control" id="correo" value=""  placeholder="Usuario">
+              </div>
+              <div class="mb-3">
+                <input type="password" id="password" value="" class="form-control" required placeholder="Contraseña">
+              </div>
+              
+              <div class="text-center">
+                <button type="submit" class="btn btn-dark text-white w-100 my-4 mb-2" id="login">INGRESAR</button>
+              </div>
+              <!-- <p class="text-sm mt-3 mb-0">No tiene usuario y contraseña? <a href="javascript:;" class="text-dark font-weight-bolder">Solicitar</a></p> -->
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="mb-3">
-    <input type="password" class="form-control form-control-lg" placeholder="Contraseña" title="Contraseña">
+  </div>
+</main>
+<!-- -------- START FOOTER 3 w/ COMPANY DESCRIPTION WITH LINKS & SOCIAL ICONS & COPYRIGHT ------- -->
+<footer class="footer py-1">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 mx-auto text-center mb-1">
+      </div> 
     </div>
-    <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" id="rememberMe">
-    <label class="form-check-label" for="rememberMe">Acuérdame</label>
+    <div class="row">
+      <div class="col-8 mx-auto text-center mt-1">
+        <h6 class="mb-0 text-secondary">
+          Todos los derechos © <script>
+            document.write(new Date().getFullYear())
+          </script>InventSoft<small style="color: yellow;">Co</small><small style="color: blue;">lom</small><small style="color: red;">bia</small>
+        </h6>
+      </div>
     </div>
-    <div class="text-center">
-    <button type="button" class="btn btn-lg btn-dark btn-lg w-100 mt-4 mb-0">Iniciar sesión</button>
-    </div>
-    </form>
-    </div>
-    <div class="card-footer text-center pt-0 px-lg-2 px-1">
-    <p class="mb-4 text-sm mx-auto">
-    ¿No tienes una cuenta?
-    <a href="javascript:;" class="text-primary text-gradient font-weight-bold">Inscribete</a>
-    </p>
-    </div>
-    </div>
-    </div>
-    
-    </div>
-    </div>
-    </div>
-    </section>
-    </main>
+  </div>
+</footer>
