subiendo los cambios

--- a/src/app/inventarios/inventario/inventario.component.html
+++ b/src/app/inventarios/inventario/inventario.component.html
@@ -1,3 +1,4 @@
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *  * -->
 <!-- * * * * * * * * * * * JERSON GALVEZ ENSUNCHO * * * * * * * * * * * -->
 <!-- ******* * * * * * * * PROYECTO INVENTSOFT * * * * * * * * * * * * * -->
@@ -92,20 +93,30 @@
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
                   <li class="breadcrumb-item text-sm"><a class="opacity-5 " href="javascript:;">InventSoft</a></li>
-                  <li class="breadcrumb-item text-sm  active" aria-current="page">Usuarios</li>
+                  <li class="breadcrumb-item text-sm  active" aria-current="page">Inventarios</li>
                 </ol>
               </nav>
               <div class="d-flex align-items-center">
-                <p class="mb-0 h6 text-uppercase ">Usuarios</p>
+                <p class="mb-0 h6 text-uppercase ">inventarios</p>
                 <button
                   class="btn btn-primary text-white font-weight-bold btn-xs ms-auto"
                 > 
-                  <i class="fas fa-pen"></i> Actualizar
+                  <i class="fas fa-pen"></i> Agregar producto
+                </button>
+                <button
+                  class="btn btn-dark text-white font-weight-bold btn-xs mx-2"
+                > 
+                  <i class="fas fa-plus"></i> Consulta
+                </button>
+                <button
+                  class="btn btn-success text-white font-weight-bold btn-xs mx-2"
+                > 
+                  <i class="fas fa-plus"></i> Entrada
                 </button>
                 <button
                   class="btn btn-danger text-white font-weight-bold btn-xs mx-2"
                 > 
-                  <i class="fas fa-plus"></i> Agregar
+                  <i class="fas fa-plus"></i> Salida
                 </button>
               </div>
             </div>
@@ -117,11 +128,12 @@
                 <thead style="background-color: black !important;">
                   <tr>
                     <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12"></th>
+                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">IMAGEN</th>
+                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">CODIGO</th>
                     <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">NOMBRE</th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">USUARIO</th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">TELEFONO</th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">ROL USUARIO</th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">ESTADO</th>
+                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">CATEGORIA</th>
+                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">VALOR</th>
+                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">STOCK</th>
                   </tr>
                 </thead>
                 <tbody></tbody>
