--- a/src/app/seguridad/inicio/inicio.component.html
+++ b/src/app/seguridad/inicio/inicio.component.html
@@ -92,90 +92,70 @@
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
                   <li class="breadcrumb-item text-sm"><a class="opacity-5 " href="javascript:;">InventSoft</a></li>
-                  <li class="breadcrumb-item text-sm  active" aria-current="page">Usuarios</li>
+                  <li class="breadcrumb-item text-sm  active" aria-current="page">Inicio</li>
                 </ol>
               </nav>
               <div class="d-flex align-items-center">
-                <p class="mb-0 h6 text-uppercase ">Usuarios</p>
-                <button
-                  class="btn btn-primary text-white font-weight-bold btn-xs ms-auto"
-                > 
-                  <i class="fas fa-pen"></i> Actualizar
-                </button>
-                <button
-                  class="btn btn-danger text-white font-weight-bold btn-xs mx-2"
-                > 
-                  <i class="fas fa-plus"></i> Agregar
-                </button>
+                <p class="mb-0 h6 text-uppercase ">inicio</p>
               </div>
             </div>
           </div>
-        <div class="row mt-1">
-          <div class="col-md-8">
-            <div class="table-responsive">
-              <table class="table table-striped table-hover">
-                <thead style="background-color: black !important;">
-                  <tr>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12"></th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">NOMBRE</th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">USUARIO</th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">TELEFONO</th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">ROL USUARIO</th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">ESTADO</th>
-                  </tr>
-                </thead>
-                <tbody></tbody>
-              </table>
+          <div class="row mt-3">
+            <div class="col-md-12">
+                <div class="card shadow-lg mx-4 card-profile-top">
+                    <div class="card-body p-3">
+                    <div class="row gx-4">
+                    <div class="col-auto">
+                    <div class="avatar avatar-xl position-relative">
+                    <img src="https://demos.creative-tim.com/argon-dashboard/assets/img/team-1.jpg" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+                    </div>
+                    </div>
+                    <div class="col-auto my-auto">
+                    <div class="h-100">
+                    <h5 class="mb-1">
+                    Jerson Galvez Ensuncho
+                    </h5>
+                    <p class="mb-0 font-weight-bold text-sm">
+                    Ingeniero Sistemas
+                    </p>
+                    </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3">
+                    <div class="nav-wrapper position-relative end-0">
+                    <ul class="nav nav-pills nav-fill p-1" role="tablist">
+                    <li class="nav-item">
+                    <a class="nav-link mb-0 px-0 py-1 active d-flex align-items-center justify-content-center " data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="true">
+                    <i class="ni ni-app"></i>
+                    <span class="ms-2">Ventas</span>
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link mb-0 px-0 py-1 d-flex align-items-center justify-content-center " data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="false">
+                    <i class="ni ni-email-83"></i>
+                    <span class="ms-2">Mensajes</span>
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link mb-0 px-0 py-1 d-flex align-items-center justify-content-center " data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="false">
+                    <i class="ni ni-settings-gear-65"></i>
+                    <span class="ms-2">Configuración</span>
+                    </a>
+                    </li>
+                    </ul>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="form-group">
-              <label>Nombre</label>
-              <input type="text" class="form-control form-control-sm">
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label>Usuario</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group ">
-                  <label>Contraseña</label>
-                  <div class="input-group">  
-                    <input type="password" class="form-control form-control-sm">
-                    <!-- <button class="btn btn-primary" type="button"> <i class="fas fa-eye"></i> </button> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label>Telefono</label>
-              <input type="number" class="form-control form-control-sm">
-            </div>
-            <div class="form-group">
-              <label>Rol Usuario</label>
-              <select 
-                class="form-control form-control-sm"
-              >
-                <option value="">Administrador</option>
-                <option value="">Vendedor</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label>Estado</label>
-              <select 
-                class="form-control form-control-sm"
-              >
-                <option value="">Activo</option>
-                <option value="">Inactivo</option>
-              </select>
-            </div>
-          </div>
-        </div>
+          <br>
+          <!--  -->
       </div>
       </div>
     </div>
   </div>
+  
+
+
 
