--- a/src/app/ventas/compras/compras.component.html
+++ b/src/app/ventas/compras/compras.component.html
@@ -92,11 +92,11 @@
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
                   <li class="breadcrumb-item text-sm"><a class="opacity-5 " href="javascript:;">InventSoft</a></li>
-                  <li class="breadcrumb-item text-sm  active" aria-current="page">Usuarios</li>
+                  <li class="breadcrumb-item text-sm  active" aria-current="page">Compras</li>
                 </ol>
               </nav>
               <div class="d-flex align-items-center">
-                <p class="mb-0 h6 text-uppercase ">Usuarios</p>
+                <p class="mb-0 h6 text-uppercase ">compras</p>
                 <button
                   class="btn btn-primary text-white font-weight-bold btn-xs ms-auto"
                 > 
@@ -117,11 +117,13 @@
                 <thead style="background-color: black !important;">
                   <tr>
                     <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12"></th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">NOMBRE</th>
+                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">CATEGORIA</th>
+                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">PROVEEDOR</th>
+                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">PRECIO FACTURA</th>
+                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">CUANTAS POR COBRAR</th>
                     <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">USUARIO</th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">TELEFONO</th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">ROL USUARIO</th>
-                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">ESTADO</th>
+                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">FECHA LIMITE</th>
+                    <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">FECHA ACTUAL</th>
                   </tr>
                 </thead>
                 <tbody></tbody>
