--- a/src/app/procedimientos/colposcopia/colposcopia.component.html
+++ b/src/app/procedimientos/colposcopia/colposcopia.component.html
@@ -1,4 +1,3 @@
-
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *  * -->
 <!-- * * * * * * * * * * * JERSON GALVEZ ENSUNCHO * * * * * * * * * * * -->
 <!-- ******* * * * * * * * PROYECTO CLINICSOFT * * * * * * * * * * * * * -->
@@ -175,9 +174,9 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
           <li class="breadcrumb-item text-sm"><a class="opacity-5 text-white" href="javascript:;">Administración</a></li>
-          <li class="breadcrumb-item text-sm text-white active" aria-current="page">Pacientes</li>
+          <li class="breadcrumb-item text-sm text-white active" aria-current="page">Colposcopia</li>
         </ol>
-        <h6 class="font-weight-bolder text-white mb-0">Pacientes</h6>
+        <h6 class="font-weight-bolder text-white mb-0">Colposcopia</h6>
       </nav>
       <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
         <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -218,140 +217,8 @@
     <div class="row ">
       <div class="card">
         <br>
-        <div class="row">
-          <div class="col-md-12">
-            <table class="table table-striped table-hover">
-              <thead>
-                <tr class="bg-default">
-                  <th class="text-xs text-white">OPCIONES</th>
-                  <th class="text-xs text-white">PACIENTES</th>
-                  <th class="text-xs text-white">ESTADO</th>
-                  <th class="text-xs text-white">DOCTOR</th>
-                  <th class="text-xs text-white">ESPECIALIDAD</th>
-                  <th class="text-xs text-white">COSTO</th>
-                </tr>
-              </thead>
-              <tbody>
-
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="row mt-2">
-          <div class="col-md-12">
-            <h5>Registrar Atencion</h5>
-
-          </div>
-        </div>
-        <div class="row mt-2">
-          <div class="col-md-6">
-            <h6>Datos del Paciente</h6>
-            <div class="row mt-2">
-              <div class="row">
-                <div class="col-md-4">
-                    <label for="">DNI</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-                <div class="col-md-4">
-                  <label for="">No HC</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-                <div class="col-md-4">
-                  <label for="">¿lista de espera?</label> <br>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                    <label class="form-check-label" for="inlineRadio1">Si</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                    <label class="form-check-label" for="inlineRadio2">No</label>
-                  </div>
-                </div>
-              </div>
-              <div class="row mt-1">
-                <div class="col-md-12">
-                  <label for="">Nombre Completo</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-              </div>
-              <div class="row mt-2">
-                <div class="col-md-6">
-                  <label for="">Especialidad</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-                <div class="col-md-6">
-                  <label for="">Doctor</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <h6>Datos de la factura</h6>
-            <div class="row">
-              <div class="row">
-                <div class="col-md-6">
-                  <label for="">Fecha</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-                <div class="col-md-6">
-                  <label for="">No Factura</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-              </div>
-              <div class="row mt-1">
-                <div class="col-md-4">
-                  <label for="">Costo</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-                <div class="col-md-4">
-                  <label for="">Descuento</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-                <div class="col-md-4">
-                  <label for="">Comision</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-              </div>
-              <div class="row mt-1">
-                <div class="col-md-4">
-                  <label for="">Cantidad recibida</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-                <div class="col-md-4">
-                  <label for="">Cantidad a Devolver</label>
-                  <input type="text" class="form-control form-control-sm">
-                </div>
-                <div class="col-md-4">
-                  <label for="">Forma de pago</label>
-                  <div class="form-check">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                    <label class="form-check-label" for="exampleRadios1">
-                      Efectivo
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                    <label class="form-check-label" for="exampleRadios2">
-                      Tarjeta
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mt-3">
-
-            <div class="col-md-1 offset-md-8">
-              <h5 class="text-center">TOTAL</h5>
-            </div>
-            <div class="col-md-3">
-              <input type="text" class="form-control form-control-sm">
-            </div>
-          </div>
-        </div>
         <!-- CONTENIDO  -->
-
       </div>
     </div>
   </div>
+
