--- a/src/app/admisiones/pacientes/pacientes.component.html
+++ b/src/app/admisiones/pacientes/pacientes.component.html
@@ -216,8 +216,213 @@
   <div class="container-fluid py-1">
     <div class="row ">
       <div class="card">
-        <br>
-        <!-- CONTENIDO  -->
+        <div class="container-fluid mt-3">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="d-flex flex-row-reverse">
+                <a
+                  class="btn btn-success text-white btn-xs"
+                >
+                  <i class="fas fa-building text-white"></i> HC
+                </a>
+                <a
+                  class="btn btn-danger text-white btn-xs mx-2"
+                >
+                  <i class="fas fa-building text-white"></i> Actualizar
+                </a>
+                <a
+                  class="btn btn-primary text-white btn-xs mx-1"
+                >
+                  <i class="fas fa-building text-white"></i> Crear
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <table class="table table-striped table-hover">
+                <thead>
+                  <tr class="bg-default">
+                    <th class="text-xs text-white"></th>
+                    <th class="text-xs text-white">DNI</th>
+                    <th class="text-xs text-white">HC</th>
+                    <th class="text-xs text-white">APELLIDOS</th>
+                    <th class="text-xs text-white">NOMBRES</th>
+                    <th class="text-xs text-white">DIRECCION</th>
+                    <th class="text-xs text-white">TELEFONO</th>
+                    <th class="text-xs text-white">FECHA NACIMIENTO</th>
+                    <th class="text-xs text-white">SEXO</th>
+                    <th class="text-xs text-white">ESTADO CIVIL</th>
+                  </tr>
+                </thead>
+                <tbody></tbody>
+              </table>
+            </div>
+          </div>
+          <div class="row mt-2">
+            <h5>Datos del Paciente</h5>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <label>DNI</label>
+              <input
+                type="text"
+                class="form-control form-control-sm"
+              >
+            </div>
+            <div class="col-md-4">
+              <label>Apellidos</label>
+              <input
+                type="text"
+                class="form-control form-control-sm"
+              >
+            </div>
+            <div class="col-md-4">
+              <label>Nombres</label>
+              <input
+                type="text"
+                class="form-control form-control-sm"
+              >
+            </div>
+            <div class="col-md-1">
+              <label>HC</label>
+              <input
+                type="text"
+                class="form-control form-control-sm"
+              >
+            </div>
+          </div>
+          <div class="row mt-1">
+            <div class="col-md-3">
+              <label>Celular</label>
+              <input
+                type="text"
+                class="form-control form-control-sm"
+              >
+            </div>
+            <div class="col-md-2">
+              <label>Sexo</label>
+              <input
+                type="text"
+                class="form-control form-control-sm"
+              >
+            </div>
+            <div class="col-md-2">
+              <label>Fecha de nacimiento</label>
+              <input
+                type="date"
+                class="form-control form-control-sm"
+              >
+            </div>
+            <div class="col-md-1">
+              <label>Edad</label>
+              <input
+                type="text"
+                class="form-control form-control-sm"
+              >
+            </div>
+            <div class="col-md-4">
+              <label>Direcciòn</label>
+              <input
+                type="text"
+                class="form-control form-control-sm"
+              >
+            </div>
+          </div>
+          <div class="row mt-1">
+            <div class="col-md-4">
+              <label>Departamento</label>
+              <select
+                class="form-control form-control-sm text-capitalize"
+              >
+                <option value="">Seleccione una opcion</option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <label>Provincia</label>
+              <select
+                class="form-control form-control-sm"
+              >
+                <option value="">Seleccione una opcion</option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <label>Distrito</label>
+              <select
+                class="form-control form-control-sm"
+              >
+                <option value="">Seleccione una opcion</option>
+              </select>
+            </div>
+          </div>
+          <div class="row mt-1">
+            <div class="col-md-4">
+              <label>Ocupaciòn</label>
+              <select
+                class="form-control form-control-sm"
+              >
+                <option value="">Seleccione una opcion</option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <label>Grado Academico</label>
+              <select
+                class="form-control form-control-sm"
+              >
+                <option value="">Seleccione una opcion</option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <label>Estado Civil</label>
+              <select
+                class="form-control form-control-sm"
+              >
+                <option value="">Seleccione una opcion</option>
+              </select>
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-md-12">
+              <h5>¿Es menor de edad ?</h5>
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
+                <label class="form-check-label" for="flexSwitchCheckChecked">Si</label>
+              </div>
+            </div>
+            <div class="row mt-1" [hidden]="containerResponsable">
+              <div class="col-md-3">
+                <label>Documento</label>
+                <input
+                  type="text"
+                  class="form-control form-control-sm"
+                >
+              </div>
+              <div class="col-md-4">
+                <label>Nombre Responsable</label>
+                <input
+                  type="text"
+                  class="form-control form-control-sm"
+                >
+              </div>
+              <div class="col-md-2">
+                <label>Telefono</label>
+                <input
+                  type="text"
+                  class="form-control form-control-sm"
+                >
+              </div>
+              <div class="col-md-3">
+                <label>Parentesco</label>
+                <select
+                  class="form-control form-control-sm"
+                >
+                <option value="">Seleccione una opcion</option>
+              </select>
+              </div>
+            </div>
+          </div>
+          <br>
+        </div>
       </div>
     </div>
   </div>
