subiendo el cambio

--- a/src/app/admisiones/triage/triage.component.html
+++ b/src/app/admisiones/triage/triage.component.html
@@ -222,7 +222,7 @@
               <table class="table table-striped table-hover mt-3">
                 <thead>
                   <tr class="bg-default">
-                    <th class="text-xs text-white">OPCIONES</th>
+                    <th class="text-xs text-white"></th>
                     <th class="text-xs text-white">ESTADO</th>
                     <th class="text-xs text-white">DNI</th>
                     <th class="text-xs text-white">PACIENTE</th>
@@ -355,14 +355,17 @@
                     formControlName="imc_triage"
                     [(ngModel)]="imc_triage"
                   >
-                </div>
-                <div class="d-grid gap-2">
                   <button
                     class="btn btn-success mt-3"
                     type="button"
-                    (click)="vervalor()"
                   >
                     Guardar
+                  </button>
+                  <button
+                    class="btn btn-danger mt-3 mx-2"
+                    type="button"
+                  >
+                    Pasar
                   </button>
                 </div>
               </div>
