--- a/src/app/admisiones/admision/admision.component.html
+++ b/src/app/admisiones/admision/admision.component.html
@@ -175,9 +175,9 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
           <li class="breadcrumb-item text-sm"><a class="opacity-5 text-white" href="javascript:;">Administración</a></li>
-          <li class="breadcrumb-item text-sm text-white active" aria-current="page">Pacientes</li>
+          <li class="breadcrumb-item text-sm text-white active" aria-current="page">Admision</li>
         </ol>
-        <h6 class="font-weight-bolder text-white mb-0">Pacientes</h6>
+        <h6 class="font-weight-bolder text-white mb-0">Admision</h6>
       </nav>
       <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
         <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -237,13 +237,8 @@
             </table>
           </div>
         </div>
-        <div class="row mt-2">
-          <div class="col-md-12">
-            <h5>Registrar Atencion</h5>
-
-          </div>
-        </div>
-        <div class="row mt-2">
+        
+        <div class="row mt-4">
           <div class="col-md-6">
             <h6>Datos del Paciente</h6>
             <div class="row mt-2">
@@ -287,7 +282,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <h6>Datos de la factura</h6>
+            <h6>Datos de la Factura</h6>
             <div class="row">
               <div class="row">
                 <div class="col-md-6">
