subiendo los cambios

--- a/src/app/ecografias/ecografia/ecografia.component.html
+++ b/src/app/ecografias/ecografia/ecografia.component.html
@@ -3,171 +3,12 @@
 <!-- ******* * * * * * * * PROYECTO CLINICSOFT * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 
+
 <div class="min-height-300 bg-default position-absolute w-100"></div>
 <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
-  <div class="sidenav-header">
-     <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-     <a class="navbar-brand m-0" href="#">
-     <img src="http://localhost/CODEIGNITER/ClinicSoft/public/img/theme/logo.png" class="navbar-brand-img h-100" alt="main_logo">
-     <span class="mx-3 font-weight-bold"> <span class="text-black h6">ClinicSoft</span><small class="text-danger">peru</small></span>
-     <!-- <span class="mx-3 font-weight-bold"> <span class="text-black h6">ClinicSoft</span><small style="color: yellow;">Co</small><small class="text-primary">lom</small><small class="text-danger">bia</small></span> -->
-     </a>
-  </div>
-  <hr class="horizontal dark mt-0">
-  <div class="navbar-collapse  w-auto " style="height: 540px !important;" id="sidenav-collapse-main">
-     <ul class="navbar-nav">
-        <li class="nav-item ">
-           <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#atencion">
-           <i class="fas fa-user-nurse"></i>
-           <span class="sidenav-normal "> Admisiones <b class="caret"></b></span>
-           </a>
-           <div class="collapse " id="atencion">
-              <ul class="nav nav-sm flex-column">
-                <li class="nav-item">
-                   <a class="nav-link " href="">
-                   <span class="sidenav-normal">Pacientes</span>
-                   </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link " href="">
-                  <span class="sidenav-normal">Citas</span>
-                  </a>
-                 </li>
-                 <li class="nav-item">
-                    <a class="nav-link" href="">
-                    <span class="sidenav-normal">Admisión</span>
-                    </a>
-                 </li>
-                 <li class="nav-item">
-                    <a class="nav-link " href="">
-                    <span class="sidenav-normal"> Triage</span>
-                    </a>
-                 </li>
-                 <li class="nav-item">
-                    <a class="nav-link " href="">
-                    <span class="sidenav-normal">Laboratorio</span>
-                    </a>
-                 </li>
-              </ul>
-           </div>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#procedimientos">
-          <i class="fas fa-flask"></i>
-          <span class="sidenav-normal ">Procedimientos<b class="caret"></b></span>
-          </a>
-          <div class="collapse " id="procedimientos">
-             <ul class="nav nav-sm flex-column">
-               <li class="nav-item">
-                 <a class="nav-link " href="">
-                  <span class="sidenav-normal">Colposcopia</span>
-                 </a>
-               </li>
-                <li class="nav-item">
-                   <a class="nav-link" href="">
-                   <span class="sidenav-normal">Ecografias</span>
-                   </a>
-                </li>
-             </ul>
-          </div>
-       </li>
-       <li class="nav-item ">
-        <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#inventarios">
-        <i class="fa fa-shopping-cart"></i>
-        <span class="sidenav-normal ">Inventarios<b class="caret"></b></span>
-        </a>
-        <div class="collapse " id="inventarios">
-           <ul class="nav nav-sm flex-column">
-             <li class="nav-item">
-               <a class="nav-link " href="">
-                <span class="sidenav-normal">Productos</span>
-               </a>
-             </li>
-              <li class="nav-item">
-                 <a class="nav-link" href="">
-                 <span class="sidenav-normal">Movimientos</span>
-                 </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="">
-                <span class="sidenav-normal">Kardex</span>
-                </a>
-             </li>
-           </ul>
-        </div>
-       </li>
-       <li class="nav-item ">
-        <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#contable">
-        <i class="fas fa-money-bill"></i>
-        <span class="sidenav-normal ">Contabilidad<b class="caret"></b></span>
-        </a>
-        <div class="collapse " id="contable">
-           <ul class="nav nav-sm flex-column">
-             <li class="nav-item">
-               <a class="nav-link " href="">
-                <span class="sidenav-normal">Pagos</span>
-               </a>
-             </li>
-              <li class="nav-item">
-                 <a class="nav-link" href="">
-                 <span class="sidenav-normal">Gastos</span>
-                 </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="">
-                <span class="sidenav-normal">Finanzas</span>
-                </a>
-             </li>
-           </ul>
-        </div>
-       </li>
-       <li class="nav-item ">
-        <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#seguridad">
-        <i class="fas fa-cogs"></i>
-        <span class="sidenav-normal ">Seguridad<b class="caret"></b></span>
-        </a>
-        <div class="collapse " id="seguridad">
-           <ul class="nav nav-sm flex-column">
-             <li class="nav-item">
-               <a class="nav-link " href="">
-                <span class="sidenav-normal">Administrativos</span>
-               </a>
-             </li>
-             <li class="nav-item">
-              <a class="nav-link " href="">
-               <span class="sidenav-normal">Medicos</span>
-              </a>
-            </li>
-           </ul>
-        </div>
-       </li>
-       <li class="nav-item">
-         <a class="nav-link" href="#">
-           <i class="fas fa-chart-pie"></i>
-           <span>Reportes</span>
-         </a>
-       </li>
-       <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="fas fa-pills"></i>
-          <span>Farmacia</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="fas fa-vial"></i>
-          <span>Resultados</span>
-        </a>
-      </li>
-     <li class="nav-item">
-       <a class="nav-link" href="#">
-         <i class="fas fa-info-circle"></i>
-         <span> Version 3.0.0.0</span>
-       </a>
-      </li>
-     </ul>
-  </div>
+  <app-menu></app-menu> 
 </aside>
+
 <main class="main-content position-relative border-radius-lg">
   <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur" data-scroll="false">
     <div class="container-fluid py-1 px-3">
@@ -184,29 +25,24 @@
           </div>
         </div>
         <ul class="navbar-nav  justify-content-end">
+            <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
+                <a href="javascript:;" class="nav-link text-white p-0" id="iconNavbarSidenav">
+                  <div class="sidenav-toggler-inner">
+                    <i class="sidenav-toggler-line bg-white"></i>
+                    <i class="sidenav-toggler-line bg-white"></i>
+                    <i class="sidenav-toggler-line bg-white"></i>
+                  </div>
+                </a>
+              </li>
+              <li class="nav-item dropdown pe-2 d-flex align-items-center">
+                <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="fa fa-bell cursor-pointer mx-2"></i>
+                </a>
+              </li>
           <li class="nav-item d-flex align-items-center">
             <a href="#" class="nav-link text-white font-weight-bold px-0">
-              <i class="fa fa-user me-sm-1"></i>
-              <span class="d-sm-inline d-none">Cerrar Sesión</span>
-            </a>
-          </li>
-          <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
-            <a href="javascript:;" class="nav-link text-white p-0" id="iconNavbarSidenav">
-              <div class="sidenav-toggler-inner">
-                <i class="sidenav-toggler-line bg-white"></i>
-                <i class="sidenav-toggler-line bg-white"></i>
-                <i class="sidenav-toggler-line bg-white"></i>
-              </div>
-            </a>
-          </li>
-          <li class="nav-item px-3 d-flex align-items-center">
-            <a href="javascript:;" class="nav-link text-white p-0">
-              <i class="fa fa-cog fixed-plugin-button-nav cursor-pointer"></i>
-            </a>
-          </li>
-          <li class="nav-item dropdown pe-2 d-flex align-items-center">
-            <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa fa-bell cursor-pointer"></i>
+                <span class="d-sm-inline d-none">Cerrar Sesión</span>
+                <i class="fa fa-user-circle me-sm-1 mx-2"></i>
             </a>
           </li>
         </ul>
