subiendo los cambios

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -64,7 +64,7 @@
             </ul>
          </div>
       </li>
-      <li class="nav-item ">
+      <!-- <li class="nav-item ">
        <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#inventarios">
        <i class="fa fa-shopping-cart"></i>
        <span class="sidenav-normal ">Inventarios<b class="caret"></b></span>
@@ -151,7 +151,7 @@
          <i class="fas fa-vial"></i>
          <span>Resultados</span>
        </a>
-     </li>
+     </li> -->
     <li class="nav-item">
       <a class="nav-link" href="#">
         <i class="fas fa-info-circle"></i>
