--- a/src/app/procedimientos/colposcopia/colposcopia.component.html
+++ b/src/app/procedimientos/colposcopia/colposcopia.component.html
@@ -5,168 +5,7 @@
 
 <div class="min-height-300 bg-default position-absolute w-100"></div>
 <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
-  <div class="sidenav-header">
-     <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-     <a class="navbar-brand m-0" href="#">
-     <img src="http://localhost/CODEIGNITER/ClinicSoft/public/img/theme/logo.png" class="navbar-brand-img h-100" alt="main_logo">
-     <span class="mx-3 font-weight-bold"> <span class="text-black h6">ClinicSoft</span><small class="text-danger">peru</small></span>
-     <!-- <span class="mx-3 font-weight-bold"> <span class="text-black h6">ClinicSoft</span><small style="color: yellow;">Co</small><small class="text-primary">lom</small><small class="text-danger">bia</small></span> -->
-     </a>
-  </div>
-  <hr class="horizontal dark mt-0">
-  <div class="navbar-collapse  w-auto " style="height: 540px !important;" id="sidenav-collapse-main">
-     <ul class="navbar-nav">
-        <li class="nav-item ">
-           <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#atencion">
-           <i class="fas fa-user-nurse"></i>
-           <span class="sidenav-normal "> Admisiones <b class="caret"></b></span>
-           </a>
-           <div class="collapse " id="atencion">
-              <ul class="nav nav-sm flex-column">
-                <li class="nav-item">
-                   <a class="nav-link " href="">
-                   <span class="sidenav-normal">Pacientes</span>
-                   </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link " href="">
-                  <span class="sidenav-normal">Citas</span>
-                  </a>
-                 </li>
-                 <li class="nav-item">
-                    <a class="nav-link" href="">
-                    <span class="sidenav-normal">Admisión</span>
-                    </a>
-                 </li>
-                 <li class="nav-item">
-                    <a class="nav-link " href="">
-                    <span class="sidenav-normal"> Triage</span>
-                    </a>
-                 </li>
-                 <li class="nav-item">
-                    <a class="nav-link " href="">
-                    <span class="sidenav-normal">Laboratorio</span>
-                    </a>
-                 </li>
-              </ul>
-           </div>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#procedimientos">
-          <i class="fas fa-flask"></i>
-          <span class="sidenav-normal ">Procedimientos<b class="caret"></b></span>
-          </a>
-          <div class="collapse " id="procedimientos">
-             <ul class="nav nav-sm flex-column">
-               <li class="nav-item">
-                 <a class="nav-link " href="">
-                  <span class="sidenav-normal">Colposcopia</span>
-                 </a>
-               </li>
-                <li class="nav-item">
-                   <a class="nav-link" href="">
-                   <span class="sidenav-normal">Ecografias</span>
-                   </a>
-                </li>
-             </ul>
-          </div>
-       </li>
-       <li class="nav-item ">
-        <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#inventarios">
-        <i class="fa fa-shopping-cart"></i>
-        <span class="sidenav-normal ">Inventarios<b class="caret"></b></span>
-        </a>
-        <div class="collapse " id="inventarios">
-           <ul class="nav nav-sm flex-column">
-             <li class="nav-item">
-               <a class="nav-link " href="">
-                <span class="sidenav-normal">Productos</span>
-               </a>
-             </li>
-              <li class="nav-item">
-                 <a class="nav-link" href="">
-                 <span class="sidenav-normal">Movimientos</span>
-                 </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="">
-                <span class="sidenav-normal">Kardex</span>
-                </a>
-             </li>
-           </ul>
-        </div>
-       </li>
-       <li class="nav-item ">
-        <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#contable">
-        <i class="fas fa-money-bill"></i>
-        <span class="sidenav-normal ">Contabilidad<b class="caret"></b></span>
-        </a>
-        <div class="collapse " id="contable">
-           <ul class="nav nav-sm flex-column">
-             <li class="nav-item">
-               <a class="nav-link " href="">
-                <span class="sidenav-normal">Pagos</span>
-               </a>
-             </li>
-              <li class="nav-item">
-                 <a class="nav-link" href="">
-                 <span class="sidenav-normal">Gastos</span>
-                 </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="">
-                <span class="sidenav-normal">Finanzas</span>
-                </a>
-             </li>
-           </ul>
-        </div>
-       </li>
-       <li class="nav-item ">
-        <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#seguridad">
-        <i class="fas fa-cogs"></i>
-        <span class="sidenav-normal ">Seguridad<b class="caret"></b></span>
-        </a>
-        <div class="collapse " id="seguridad">
-           <ul class="nav nav-sm flex-column">
-             <li class="nav-item">
-               <a class="nav-link " href="">
-                <span class="sidenav-normal">Administrativos</span>
-               </a>
-             </li>
-             <li class="nav-item">
-              <a class="nav-link " href="">
-               <span class="sidenav-normal">Medicos</span>
-              </a>
-            </li>
-           </ul>
-        </div>
-       </li>
-       <li class="nav-item">
-         <a class="nav-link" href="#">
-           <i class="fas fa-chart-pie"></i>
-           <span>Reportes</span>
-         </a>
-       </li>
-       <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="fas fa-pills"></i>
-          <span>Farmacia</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="fas fa-vial"></i>
-          <span>Resultados</span>
-        </a>
-      </li>
-     <li class="nav-item">
-       <a class="nav-link" href="#">
-         <i class="fas fa-info-circle"></i>
-         <span> Version 3.0.0.0</span>
-       </a>
-      </li>
-     </ul>
-  </div>
+  <app-menu></app-menu>
 </aside>
 <main class="main-content position-relative border-radius-lg">
   <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur" data-scroll="false">
@@ -241,29 +80,29 @@
         <div class="row mt-1">
           <div class="col-md-6">
             <label>DNI</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control form-control-sm">
           </div>
           <div class="col-md-6">
             <label>Nombre</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control form-control-sm">
           </div>
         </div>
 
           <div class="row mt-1">
             <div class="col-md-6">
               <label>Fecha</label>
-              <input type="date" class="form-control">
+              <input type="date" class="form-control form-control-sm">
             </div>
             <div class="col-md-6">
               <label>Medico</label>
-              <input type="text" class="form-control">
+              <input type="text" class="form-control form-control-sm">
             </div>
           </div>
 
         <div class="row mt-3">
           <div class="col-md-4">
             <label>U.escamo columnar</label>
-            <select class="form-select" aria-label="Default select example">
+            <select class="form-control form-control-sm">
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -272,7 +111,7 @@
           </div>
           <div class="col-md-4">
             <label>Endo cervix</label>
-            <select class="form-select" aria-label="Default select example">
+            <select class="form-control form-control-sm">
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -281,7 +120,7 @@
           </div>
           <div class="col-md-4">
             <label>Vagina</label>
-            <select class="form-select" aria-label="Default select example">
+            <select class="form-control form-control-sm">
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -293,7 +132,7 @@
         <div class="row mt-3">
           <div class="col-md-4">
             <label>Vulva</label>
-            <select class="form-select" aria-label="Default select example">
+            <select class="form-control form-control-sm">
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -302,7 +141,7 @@
           </div>
           <div class="col-md-4">
             <label>Perineo</label>
-            <select class="form-select" aria-label="Default select example">
+            <select class="form-control form-control-sm">
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -311,7 +150,7 @@
           </div>
           <div class="col-md-4">
             <label>Region Parianal</label>
-            <select class="form-select" aria-label="Default select example">
+            <select class="form-control form-control-sm">
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -323,7 +162,7 @@
         <div class="row mt-3">
           <div class="col-md-6">
             <label> Biopsia</label>
-            <select class="form-select" aria-label="Default select example">
+            <select class="form-control form-control-sm">
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -332,7 +171,7 @@
           </div>
           <div class="col-md-6">
             <label> Papanicolaou</label>
-            <select class="form-select" aria-label="Default select example">
+            <select class="form-control form-control-sm">
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -344,12 +183,12 @@
         <div class="row mt-3">
           <div class="col-md-6">
             <label>Conclusiones</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control form-control-sm" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
           <div class="col-md-6">
             <label>Seleccione las imagenes</label>
-            <input class="form-control form-control-sm" id="formFileSm" type="file">
-            <input class="form-control form-control-sm mt-4" id="formFileSm" type="file">
+            <input class="form-control form-control-sm form-control form-control-sm-sm" id="formFileSm" type="file">
+            <input class="form-control form-control-sm form-control form-control-sm-sm mt-4" id="formFileSm" type="file">
           </div>
         </div>
         <br>
