subiendo la configuracion del menu

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -17,27 +17,27 @@
           <div class="collapse " id="atencion">
              <ul class="nav nav-sm flex-column">
                <li class="nav-item">
-                  <a class="nav-link " href="">
+                  <a class="nav-link "  routerLink="/pacientes">
                   <span class="sidenav-normal">Pacientes</span>
                   </a>
                </li>
-               <li class="nav-item">
+               <!-- <li class="nav-item">
                  <a class="nav-link " href="">
                  <span class="sidenav-normal">Citas</span>
                  </a>
-                </li>
+                </li> -->
                 <li class="nav-item">
-                   <a class="nav-link" href="">
+                   <a class="nav-link" routerLink="/admision">
                    <span class="sidenav-normal">Admisión</span>
                    </a>
                 </li>
                 <li class="nav-item">
-                   <a class="nav-link " href="">
+                   <a class="nav-link " routerLink="/triage">
                    <span class="sidenav-normal"> Triage</span>
                    </a>
                 </li>
                 <li class="nav-item">
-                   <a class="nav-link " href="">
+                   <a class="nav-link " routerLink="/laboratorio">
                    <span class="sidenav-normal">Laboratorio</span>
                    </a>
                 </li>
@@ -52,12 +52,12 @@
          <div class="collapse " id="procedimientos">
             <ul class="nav nav-sm flex-column">
               <li class="nav-item">
-                <a class="nav-link " href="">
+                <a class="nav-link " routerLink="/colposcopia">
                  <span class="sidenav-normal">Colposcopia</span>
                 </a>
               </li>
                <li class="nav-item">
-                  <a class="nav-link" href="">
+                  <a class="nav-link" routerLink="/ecografias">
                   <span class="sidenav-normal">Ecografias</span>
                   </a>
                </li>
