--- a/src/app/procedimientos/colposcopia/colposcopia.component.html
+++ b/src/app/procedimientos/colposcopia/colposcopia.component.html
@@ -55,7 +55,7 @@
   <div class="container-fluid py-1">
     <div class="row ">
       <div class="card">
-
+        <div class="container-fluid">
         <table class="table table-striped table-hover mt-3">
           <thead>
             <tr class="bg-default">
@@ -78,27 +78,28 @@
           </div>
         </div>
         <div class="row mt-1">
-          <div class="col-md-6">
+          <div class="col-md-2">
             <label>DNI</label>
             <input type="text" class="form-control form-control-sm">
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <label>Nombre</label>
             <input type="text" class="form-control form-control-sm">
           </div>
-        </div>
-
-          <div class="row mt-1">
-            <div class="col-md-6">
-              <label>Fecha</label>
-              <input type="date" class="form-control form-control-sm">
-            </div>
-            <div class="col-md-6">
-              <label>Medico</label>
-              <input type="text" class="form-control form-control-sm">
-            </div>
+          <div class="col-md-2">
+            <label>Fecha</label>
+            <input type="date" class="form-control form-control-sm">
           </div>
-
+          <div class="col-md-4">
+            <label>Medico</label>
+            <select class="form-control form-control-sm">
+              <option selected>Seleccione una opcion</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+        </div>
         <div class="row mt-3">
           <div class="col-md-4">
             <label>U.escamo columnar</label>
@@ -192,7 +193,7 @@
           </div>
         </div>
         <br>
-
+      </div>
       </div>
     </div>
   </div>
