subiendo los cambios

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -9,6 +9,12 @@
  <hr class="horizontal dark mt-0">
  <div class="navbar-collapse  w-auto " style="height: 540px !important;" id="sidenav-collapse-main">
     <ul class="navbar-nav">
+      <li class="nav-item">
+         <a class="nav-link" href="#">
+           <i class="fas fa-home"></i>
+           <span>Inicio</span>
+         </a>
+        </li>
        <li class="nav-item ">
           <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#atencion">
           <i class="fas fa-user-nurse"></i>
@@ -16,16 +22,16 @@
           </a>
           <div class="collapse " id="atencion">
              <ul class="nav nav-sm flex-column">
+                <li class="nav-item">
+                  <a class="nav-link " href="">
+                  <span class="sidenav-normal">Citas</span>
+                  </a>
+                 </li>
                <li class="nav-item">
                   <a class="nav-link "  routerLink="/pacientes">
                   <span class="sidenav-normal">Pacientes</span>
                   </a>
                </li>
-               <!-- <li class="nav-item">
-                 <a class="nav-link " href="">
-                 <span class="sidenav-normal">Citas</span>
-                 </a>
-                </li> -->
                 <li class="nav-item">
                    <a class="nav-link" routerLink="/admision">
                    <span class="sidenav-normal">Admisión</span>
@@ -152,8 +158,8 @@
          <span>Resultados</span>
        </a>
      </li> -->
-    <li class="nav-item">
-      <a class="nav-link" href="#">
+     <li class="nav-item">
+      <a class="nav-link">
         <i class="fas fa-info-circle"></i>
         <span> Version 3.0.0.0</span>
       </a>
