--- a/src/app/admisiones/admision/admision.component.html
+++ b/src/app/admisiones/admision/admision.component.html
@@ -56,8 +56,8 @@
   <div class="container-fluid py-1">
     <div class="row ">
       <div class="card">
-        <br>
-        <div class="row">
+        <div class="container-fluid">
+        <div class="row mt-3">
           <div class="col-md-12">
             <table class="table table-striped table-hover">
               <thead>
@@ -192,8 +192,7 @@
             </div>
           </div>
         </div>
-        <!-- CONTENIDO  -->
-
       </div>
     </div>
+   </div>
   </div>
