subiendo los cambios

--- a/src/app/procedimientos/colposcopia/colposcopia.component.html
+++ b/src/app/procedimientos/colposcopia/colposcopia.component.html
@@ -74,7 +74,7 @@
         </table>
         <div class="row mt-3">
           <div class="col-md-12">
-            <h5>CREAR COLPOSCOPIA</h5>
+            <h5>Crear Colposcopia</h5>
           </div>
         </div>
         <div class="row mt-1">
@@ -196,23 +196,5 @@
       </div>
       </div>
     </div>
-    <footer class="footer pt-3">
-      <div class="container-fluid">
-        <div class="row align-items-center justify-content-lg-between">
-          <div class="col-lg-6 mb-lg-0 mb-4">
-            <div class="copyright text-center text-sm text-muted text-lg-start">
-              © <script>
-                document.write(new Date().getFullYear())
-              </script>,
-              Realizado por
-              <a href="#" class="font-weight-bold" target="_blank">Solution TI.</a>
-            </div>
-          </div>
-          <div class="col-lg-6">
-           
-          </div>
-        </div>
-      </div>
-    </footer>
   </div>
 
