--- a/src/app/admisiones/pacientes/pacientes.component.html
+++ b/src/app/admisiones/pacientes/pacientes.component.html
@@ -61,6 +61,8 @@
               <div class="d-flex flex-row-reverse">
                 <a
                   class="btn btn-success text-white btn-xs"
+                  routerLink="/hc"
+                  target="_blank"
                 >
                   <i class="fas fa-building text-white"></i> HC
                 </a>
