--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -70,7 +70,7 @@
             </ul>
          </div>
       </li>
-      <!-- <li class="nav-item ">
+       <li class="nav-item ">
        <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#inventarios">
        <i class="fa fa-shopping-cart"></i>
        <span class="sidenav-normal ">Inventarios<b class="caret"></b></span>
@@ -78,23 +78,44 @@
        <div class="collapse " id="inventarios">
           <ul class="nav nav-sm flex-column">
             <li class="nav-item">
-              <a class="nav-link " href="">
+              <a class="nav-link " href="#">
                <span class="sidenav-normal">Productos</span>
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/inventario">
+              <span class="sidenav-normal">Inventario</span>
+              </a>
+            </li>
              <li class="nav-item">
-                <a class="nav-link" href="">
-                <span class="sidenav-normal">Movimientos</span>
-                </a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="">
+               <a class="nav-link" routerLink="/kardex">
                <span class="sidenav-normal">Kardex</span>
                </a>
             </li>
           </ul>
        </div>
       </li>
+      <li class="nav-item ">
+       <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#seguridad">
+       <i class="fas fa-cogs"></i>
+       <span class="sidenav-normal ">Seguridad<b class="caret"></b></span>
+       </a>
+       <div class="collapse " id="seguridad">
+          <ul class="nav nav-sm flex-column">
+            <li class="nav-item">
+              <a class="nav-link " routerLink="/usuarios">
+               <span class="sidenav-normal">Administrativos</span>
+              </a>
+            </li>
+            <li class="nav-item">
+             <a class="nav-link " href="">
+              <span class="sidenav-normal">Medicos</span>
+             </a>
+           </li>
+          </ul>
+       </div>
+      </li>
+      <!--
       <li class="nav-item ">
        <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#contable">
        <i class="fas fa-money-bill"></i>
@@ -117,26 +138,6 @@
                <span class="sidenav-normal">Finanzas</span>
                </a>
             </li>
-          </ul>
-       </div>
-      </li>
-      <li class="nav-item ">
-       <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#seguridad">
-       <i class="fas fa-cogs"></i>
-       <span class="sidenav-normal ">Seguridad<b class="caret"></b></span>
-       </a>
-       <div class="collapse " id="seguridad">
-          <ul class="nav nav-sm flex-column">
-            <li class="nav-item">
-              <a class="nav-link " href="">
-               <span class="sidenav-normal">Administrativos</span>
-              </a>
-            </li>
-            <li class="nav-item">
-             <a class="nav-link " href="">
-              <span class="sidenav-normal">Medicos</span>
-             </a>
-           </li>
           </ul>
        </div>
       </li>
