subiendo los cambios

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="sidenav-header">
     <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
     <a class="navbar-brand m-0" href="#">
-    <img src="http://localhost/CODEIGNITER/ClinicSoft/public/img/theme/logo.png" class="navbar-brand-img h-100" alt="main_logo">
+    <img src="assets/img/logo.png" class="navbar-brand-img h-100" alt="main_logo">
     <span class="mx-3 font-weight-bold"> <span class="text-black h6">ClinicSoft</span><small class="text-danger">peru</small></span>
     <!-- <span class="mx-3 font-weight-bold"> <span class="text-black h6">ClinicSoft</span><small style="color: yellow;">Co</small><small class="text-primary">lom</small><small class="text-danger">bia</small></span> -->
     </a>
@@ -115,7 +115,7 @@
           </ul>
        </div>
       </li>
-      <!--
+      
       <li class="nav-item ">
        <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#contable">
        <i class="fas fa-money-bill"></i>
@@ -124,17 +124,17 @@
        <div class="collapse " id="contable">
           <ul class="nav nav-sm flex-column">
             <li class="nav-item">
-              <a class="nav-link " href="">
+              <a class="nav-link " routerLink="/pagos">
                <span class="sidenav-normal">Pagos</span>
               </a>
             </li>
              <li class="nav-item">
-                <a class="nav-link" href="">
+                <a class="nav-link" routerLink="/gastos">
                 <span class="sidenav-normal">Gastos</span>
                 </a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="">
+               <a class="nav-link" routerLink="/finanzas">
                <span class="sidenav-normal">Finanzas</span>
                </a>
             </li>
@@ -142,23 +142,24 @@
        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" routerLink="/reportes">
           <i class="fas fa-chart-pie"></i>
           <span>Reportes</span>
         </a>
       </li>
+      
       <li class="nav-item">
-       <a class="nav-link" href="#">
+       <a class="nav-link">
          <i class="fas fa-pills"></i>
          <span>Farmacia</span>
        </a>
      </li>
      <li class="nav-item">
-       <a class="nav-link" href="#">
+       <a class="nav-link">
          <i class="fas fa-vial"></i>
          <span>Resultados</span>
        </a>
-     </li> -->
+     </li>
      <li class="nav-item">
       <a class="nav-link">
         <i class="fas fa-info-circle"></i>
