--- a/src/app/procedimientos/historialpaciente/historialpaciente.component.html
+++ b/src/app/procedimientos/historialpaciente/historialpaciente.component.html
@@ -44,7 +44,7 @@
                           <li><i class="fas fa-thermometer mt-2 text-success"></i> Temperatura</li>
                           <li><i class="fas fa-diagnoses text-dark"></i> Frecu Respiratoria</li>
                           <li><i class="fas fa-heartbeat mt-2 text-danger"></i> Frecu Cardiaca</li>
-                          <li><i class="fas fa-child mt-2 text-info"></i> Porcentaje grasa</li>
+                          <li><i class="fas fa-child mt-2 text-info"></i> Porcentaje Grasa</li>
                         </ul>
                     </div>
                     <div class="col-md-5">
