subiendo los cambios

--- a/src/app/seguridad/iniciarsesion/iniciarsesion.component.html
+++ b/src/app/seguridad/iniciarsesion/iniciarsesion.component.html
@@ -17,10 +17,15 @@
     <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column mx-lg-0 mx-auto">
     <div class="card card-plain">
     <div class="card-header pb-0 text-start">
-      <h4 class="font-weight-bolder text-center">Iniciar sesión</h4>
       <div class="text-center">
-        <small class="text-center">Clinica Salud Madre y Mujer</small>
+        <img src="assets/img/logo.png" class="img-fluid mb-3" width="80px;">
       </div>
+      <div class="text-center">
+        <span class="mx-3 font-weight-bold"> <span class="text-black h6 text-bold">ClinicSoft</span><small class="text-danger text-bold">peru</small></span>
+        <!-- <span class="mx-3 font-weight-bold"> <span class="text-black h6">ClinicSoft</span><small style="color: yellow;">Co</small><small class="text-primary">lom</small><small class="text-danger">bia</small></span> -->
+
+      </div>
+      <h4 class="font-weight-bolder text-center mt-4">Iniciar sesión</h4>
     </div>
     <div class="card-body">
     <form role="form">
