--- a/src/app/admisiones/admision/admision.component.html
+++ b/src/app/admisiones/admision/admision.component.html
@@ -5,7 +5,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 <!-- <p-toast></p-toast>
 <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000"></p-confirmDialog> -->
-
 <div class="min-height-300 bg-default position-absolute w-100"></div>
 <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
   <app-menu></app-menu>
@@ -91,7 +90,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <label for="">Fecha</label>
-                  <input type="time" class="form-control form-control-sm">
+                  <input type="date" class="form-control form-control-sm">
                 </div>
                 <div class="col-md-6">
                   <label for="">No Factura</label>
