--- a/src/app/admisiones/pacientes/pacientes.component.html
+++ b/src/app/admisiones/pacientes/pacientes.component.html
@@ -4,54 +4,11 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 
 <div class="min-height-300 bg-default position-absolute w-100"></div>
-<aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
+<aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-1 border-radius-xl my-3 fixed-start ms-4 " style="z-index: 1 !important;" id="sidenav-main">
  <app-menu></app-menu>
 </aside>
 <main class="main-content position-relative border-radius-lg">
-  <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur" data-scroll="false">
-    <div class="container-fluid py-1 px-3">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
-          <li class="breadcrumb-item text-sm"><a class="opacity-5 text-white" href="javascript:;">Administración</a></li>
-          <li class="breadcrumb-item text-sm text-white active" aria-current="page">Pacientes</li>
-        </ol>
-        <h6 class="font-weight-bolder text-white mb-0">Pacientes</h6>
-      </nav>
-      <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
-        <div class="ms-md-auto pe-md-3 d-flex align-items-center">
-          <div class="input-group">
-          </div>
-        </div>
-        <ul class="navbar-nav  justify-content-end">
-          <li class="nav-item d-flex align-items-center">
-            <a href="#" class="nav-link text-white font-weight-bold px-0">
-              <i class="fa fa-user me-sm-1"></i>
-              <span class="d-sm-inline d-none">Cerrar Sesión</span>
-            </a>
-          </li>
-          <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
-            <a href="javascript:;" class="nav-link text-white p-0" id="iconNavbarSidenav">
-              <div class="sidenav-toggler-inner">
-                <i class="sidenav-toggler-line bg-white"></i>
-                <i class="sidenav-toggler-line bg-white"></i>
-                <i class="sidenav-toggler-line bg-white"></i>
-              </div>
-            </a>
-          </li>
-          <li class="nav-item px-3 d-flex align-items-center">
-            <a href="javascript:;" class="nav-link text-white p-0">
-              <i class="fa fa-cog fixed-plugin-button-nav cursor-pointer"></i>
-            </a>
-          </li>
-          <li class="nav-item dropdown pe-2 d-flex align-items-center">
-            <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa fa-bell cursor-pointer"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <app-cerrarsesion titulo="Pacientes"></app-cerrarsesion>
   <div class="container-fluid py-1">
     <div class="row ">
       <div class="card">
@@ -63,52 +20,61 @@
                   class="btn btn-success text-white btn-xs"
                   routerLink="/hc"
                   target="_blank"
+                  [hidden]="btnHistoriaHidden"
                 >
-                  <i class="fas fa-building text-white"></i> HC
+                  <i class="fas fa-file-medical text-white"></i> HC
                 </a>
                 <a
                   class="btn btn-danger text-white btn-xs mx-2"
+                  [hidden]="btnActualizarHidden"
                 >
-                  <i class="fas fa-building text-white"></i> Actualizar
+                  <i class="fas fa-pen text-white"></i> Actualizar
                 </a>
                 <a
                   class="btn btn-primary text-white btn-xs mx-1"
+                  data-bs-toggle="modal"
+                  data-bs-target="#staticBackdrop"
+                  [hidden]="btnAgregarHidden"
                 >
-                  <i class="fas fa-building text-white"></i> Crear
+                  <i class="fas fa-database text-white"></i> Crear
                 </a>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
-              <table class="table table-striped table-hover">
-                <thead>
-                  <tr class="bg-default">
-                    <th class="text-xs text-white"></th>
-                    <th class="text-xs text-white">DNI</th>
-                    <th class="text-xs text-white">HC</th>
-                    <th class="text-xs text-white">APELLIDOS</th>
-                    <th class="text-xs text-white">NOMBRES</th>
-                    <th class="text-xs text-white">DIRECCION</th>
-                    <th class="text-xs text-white">TELEFONO</th>
-                    <th class="text-xs text-white">FECHA NACIMIENTO</th>
-                    <th class="text-xs text-white">SEXO</th>
-                    <th class="text-xs text-white">ESTADO CIVIL</th>
-                  </tr>
-                </thead>
-                <tbody></tbody>
-              </table>
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr class="bg-default">
+                      <th class="text-xs text-white"></th>
+                      <th class="text-xs text-white">DNI</th>
+                      <th class="text-xs text-white">HC</th>
+                      <th class="text-xs text-white">APELLIDOS</th>
+                      <th class="text-xs text-white">NOMBRES</th>
+                      <th class="text-xs text-white">DIRECCION</th>
+                      <th class="text-xs text-white">TELEFONO</th>
+                      <th class="text-xs text-white">FECHA NACIMIENTO</th>
+                      <th class="text-xs text-white">SEXO</th>
+                      <th class="text-xs text-white">ESTADO CIVIL</th>
+                    </tr>
+                  </thead>
+                  <tbody></tbody>
+                </table>
+              </div>
             </div>
           </div>
           <div class="row mt-2">
-            <h5>Datos del Paciente</h5>
+            <h6>Crear Pacientes</h6>
           </div>
+          <form [formGroup]="crearPacienteForm">
           <div class="row">
             <div class="col-md-3">
               <label>DNI</label>
               <input
                 type="text"
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_dni"
               >
             </div>
             <div class="col-md-4">
@@ -116,6 +82,7 @@
               <input
                 type="text"
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_apellido"
               >
             </div>
             <div class="col-md-4">
@@ -123,6 +90,7 @@
               <input
                 type="text"
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_nombre"
               >
             </div>
             <div class="col-md-1">
@@ -130,6 +98,7 @@
               <input
                 type="text"
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_hc"
               >
             </div>
           </div>
@@ -139,6 +108,7 @@
               <input
                 type="text"
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_celular"
               >
             </div>
             <div class="col-md-2">
@@ -146,6 +116,7 @@
               <input
                 type="text"
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_sexo"
               >
             </div>
             <div class="col-md-2">
@@ -153,6 +124,7 @@
               <input
                 type="date"
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_fechanacimiento"
               >
             </div>
             <div class="col-md-1">
@@ -160,6 +132,7 @@
               <input
                 type="text"
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_edad"
               >
             </div>
             <div class="col-md-4">
@@ -167,6 +140,7 @@
               <input
                 type="text"
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_direccion"
               >
             </div>
           </div>
@@ -175,6 +149,7 @@
               <label>Departamento</label>
               <select
                 class="form-control form-control-sm text-capitalize"
+                formControlName="crearpaciente_departamento"
               >
                 <option value="">Seleccione una opcion</option>
               </select>
@@ -183,6 +158,7 @@
               <label>Provincia</label>
               <select
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_provincia"
               >
                 <option value="">Seleccione una opcion</option>
               </select>
@@ -191,6 +167,7 @@
               <label>Distrito</label>
               <select
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_distrito"
               >
                 <option value="">Seleccione una opcion</option>
               </select>
@@ -201,6 +178,7 @@
               <label>Ocupaciòn</label>
               <select
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_ocupacion"
               >
                 <option value="">Seleccione una opcion</option>
               </select>
@@ -209,6 +187,7 @@
               <label>Grado Academico</label>
               <select
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_grado"
               >
                 <option value="">Seleccione una opcion</option>
               </select>
@@ -217,16 +196,23 @@
               <label>Estado Civil</label>
               <select
                 class="form-control form-control-sm"
+                formControlName="crearpaciente_estacocivil"
               >
                 <option value="">Seleccione una opcion</option>
               </select>
             </div>
           </div>
-          <div class="row mt-2">
+          <div class="row mt-3">
             <div class="col-md-12">
-              <h5>¿Es menor de edad ?</h5>
+              <h6>¿Es menor de edad ?</h6>
               <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  role="switch"
+                  id="flexSwitchCheckChecked"
+                  formControlName="crearpaciente_esmenor"
+                >
                 <label class="form-check-label" for="flexSwitchCheckChecked">Si</label>
               </div>
             </div>
@@ -236,6 +222,7 @@
                 <input
                   type="text"
                   class="form-control form-control-sm"
+                  formControlName="crearpaciente_documentores"
                 >
               </div>
               <div class="col-md-4">
@@ -243,6 +230,7 @@
                 <input
                   type="text"
                   class="form-control form-control-sm"
+                  formControlName="crearpaciente_responsable"
                 >
               </div>
               <div class="col-md-2">
@@ -250,12 +238,14 @@
                 <input
                   type="text"
                   class="form-control form-control-sm"
+                  formControlName="crearpaciente_telefonores"
                 >
               </div>
               <div class="col-md-3">
                 <label>Parentesco</label>
                 <select
                   class="form-control form-control-sm"
+                  formControlName="crearpaciente_parentescores"
                 >
                 <option value="">Seleccione una opcion</option>
               </select>
@@ -263,7 +253,10 @@
             </div>
           </div>
           <br>
+        </form>
         </div>
       </div>
     </div>
   </div>
+
+
