--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -10,7 +10,7 @@
  <div class="navbar-collapse  w-auto " style="height: 540px !important;" id="sidenav-collapse-main">
     <ul class="navbar-nav">
       <li class="nav-item">
-         <a class="nav-link" href="#">
+         <a class="nav-link" routerLink="/inicio">
            <i class="fas fa-home"></i>
            <span>Inicio</span>
          </a>
