--- a/src/app/inventarios/kardex/kardex.component.html
+++ b/src/app/inventarios/kardex/kardex.component.html
@@ -82,6 +82,8 @@
               <label>Producto</label>
               <select
                 class="form-control form-control-sm"
+                formControlName="producto_kardex"
+                [(ngModel)]="producto_kardex"
               >
                 <option value="">Seleccione una opcion</option>
               </select>
@@ -91,6 +93,8 @@
               <input
                 type="date"
                 class="form-control form-control-sm"
+                formControlName="inicial_kardex"
+                [(ngModel)]="inicial_kardex"
               >
             </div>
             <div class="col-md-2">
@@ -98,6 +102,8 @@
               <input
                 type="date"
                 class="form-control form-control-sm"
+                formControlName="final_kardex"
+                [(ngModel)]="final_kardex"
               >
             </div>
             <div class="col-md-2 mt-1">
